--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -17,7 +17,7 @@
         <td>
           <%= link_to 'Show', link %>
           <%= link_to 'Edit', edit_link_path(link) %>
-          <%= link_to 'Destroy', link_path(link), method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
+          <%= link_to 'Destroy', link_path(link), data: { confirm: 'Are you sure?', turbo_method: :delete} %>
         </td>
       </tr>
     <% end %>
