--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -36,4 +36,4 @@
 
 <%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %> |
-<%= link_to 'Destroy', link_path(@link), method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
+<%= link_to 'Destroy', link_path(@link), data: { confirm: 'Are you sure?', turbo_method: :delete }%>
