--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ChqTo</title>
+    <title>Chq.To</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= turbo_include_tags %>
   </head>
 
   <body>
-    <header>
-      <!-- Otros elementos de encabezado aquí -->
-
-      <% if user_signed_in? %>
-        <!-- Si el usuario está autenticado, muestra el enlace de cierre de sesión -->
-        <%= link_to "Cerrar Sesión", destroy_user_session_path, data: {turbo_method: :delete}  %>
-      <% else %>
-        <!-- Si el usuario no está autenticado, muestra el enlace de inicio de sesión -->
-        <%= link_to "Iniciar Sesión", new_user_session_path %>
-        <%= link_to 'Registrar', new_user_registration_path, class: 'btn btn-primary' %>
-      <% end %>
-    </header>
-    <nav>
-      <%= link_to "Inicio", root_path %>
-      <% if user_signed_in? %>
-        <%= link_to "Enlaces", links_path %>
-      <% end %>
+    <nav class="navbar-container">
+      <div class="navbar navbar-expand-lg ">
+        <a class="navbar-brand" href="<%= root_path %>">Chq.to</a>
+  
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "My Links", links_path, class: 'nav-link' %>
+              </li>
+            <% end %>
+  
+            <% if user_signed_in? %>
+              <!-- Si el usuario está autenticado, muestra el enlace de cierre de sesión -->
+              <li class="nav-item">
+                <%= link_to "Edit Profile", edit_user_registration_path, class: 'nav-link'%>
+              </li>
+              <li class="nav-item">
+                <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-secondary'%>
+              </li>
+            <% else %>
+              <!-- Si el usuario no está autenticado, muestra el enlace de inicio de sesión -->
+              <li class="nav-item">
+                <%= link_to "Log In", new_user_session_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link btn btn-primary' %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <%= yield %>
+    <div class="body-container">
+      <% if flash[:alert] %>
+        <div class="alert alert-danger">
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+
+      <%= yield %>
+    </div>
 
     <footer>
-      <!-- Otros elementos de pie de página aquí -->
+      <!-- Tu pie de página aquí -->
     </footer>
   </body>
 </html>
