--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         </div><br>
 
         <div>
-          <%= form.submit "Create New Link", class: "btn btn-primary" %>
+          <%= form.submit "Shorten Link", class: "btn btn-primary" %>
         </div>
       <% end %>
     </div>
