Agrego comentarios en el Gemfile

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= render "users/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :username %>
+    <%= f.label :username %><br />
     <%= f.text_field :username, autocomplete: "username" %>
   </div>
   <div class="field">
